# Qwen-ASR-GUI

./: .env.example  .gitignore  1.10.0  1.txt  2.txt  README.md  asr_engine.py  audio_utils.py  config.py  launch.py  main.py  manager_config.json  qwen-asr.py  qwen_asr.db  release.bat  requirements.txt  test_output.txt  合併結果02.md
backend/glm-ocr/: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  agent.md  pyproject.toml
backend/glm-ocr/.github/: PULL_REQUEST_TEMPLATE.md
backend/glm-ocr/.github/ISSUE_TEMPLATE/: bug_report.yaml  feature-request.yaml
backend/glm-ocr/.github/workflows/: ci.yml  pre-commit.yml
backend/glm-ocr/apps/: start-docker.sh  start-local.sh
backend/glm-ocr/apps/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/glm-ocr/apps/backend/app/: __init__.py  main.py
backend/glm-ocr/apps/backend/app/api/: system.py  tasks.py
backend/glm-ocr/apps/backend/app/core/: __init__.py  lock_manager.py  ocr_client.py  recovery_handler.py  retry_handler.py  task_manager.py  worker.py
backend/glm-ocr/apps/backend/app/core/flows/: __init__.py  base.py  pipeline_flow.py
backend/glm-ocr/apps/backend/app/core/steps/: __init__.py  layout_ocr.py  merge_results.py  pdf_to_image.py
backend/glm-ocr/apps/backend/app/db/: __init__.py  database.py
backend/glm-ocr/apps/backend/app/models/: __init__.py  base.py  task.py
backend/glm-ocr/apps/backend/app/repository/: __init__.py  base.py  task.py
backend/glm-ocr/apps/backend/app/schemas/: __init__.py  common.py  response.py  system.py  task.py
backend/glm-ocr/apps/backend/app/utils/: __init__.py  config.py  image_processer.py  logger.py  upload_file_manager.py
backend/glm-ocr/apps/backend/app/utils/converters/: __init__.py  base.py  converter.py  exceptions.py  (+3 more)
backend/glm-ocr/apps/frontend/: .env.development  .env.production  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
backend/glm-ocr/apps/frontend/src/: main.tsx  routeTree.gen.ts  styles.css
backend/glm-ocr/apps/frontend/src/hooks/: useFileBlockInteraction.ts  useMdVirtualRendering.ts  usePdfNavigation.ts  usePdfPageMetrics.ts  usePdfScrollToBlock.ts  usePdfZoom.ts
backend/glm-ocr/apps/frontend/src/libs/: api.ts  blockUtils.ts  rehypeMathInHtml.ts  utils.ts
backend/glm-ocr/apps/frontend/src/routes/: __root.tsx
backend/glm-ocr/apps/frontend/src/store/: useOcrStore.ts
backend/glm-ocr/examples/: example.py
backend/glm-ocr/examples/finetune/: README.md  README_zh.md  cosyn_chemical.json  glm_ocr_full_sft.yaml  glm_ocr_lora_sft.yaml
backend/glm-ocr/examples/mlx-deploy/: README.md
backend/glm-ocr/examples/ollama-deploy/: README.md
backend/glm-ocr/examples/result/GLM-4.5V/: GLM-4.5V.json  GLM-4.5V.md
backend/glm-ocr/examples/result/code/: code.json  code.md
backend/glm-ocr/examples/result/handwritten/: handwritten.json  handwritten.md
backend/glm-ocr/examples/result/page/: page.json  page.md
backend/glm-ocr/examples/result/paper/: paper.json  paper.md
backend/glm-ocr/examples/result/seal/: seal.json  seal.md
backend/glm-ocr/examples/result/table/: table.json  table.md
backend/glm-ocr/glmocr/: __init__.py  __main__.py  api.py  cli.py  config.py  config.yaml  maas_client.py  ocr_client.py  server.py
backend/glm-ocr/glmocr/dataloader/: __init__.py  page_loader.py
backend/glm-ocr/glmocr/layout/: __init__.py  base.py  layout_detector.py
backend/glm-ocr/glmocr/parser_result/: __init__.py  base.py  pipeline_result.py
backend/glm-ocr/glmocr/pipeline/: __init__.py  pipeline.py
backend/glm-ocr/glmocr/postprocess/: __init__.py  base_post_processor.py  result_formatter.py
backend/glm-ocr/glmocr/tests/: __init__.py  conftest.py  test_integration.py  test_unit.py
backend/glm-ocr/glmocr/utils/: __init__.py  image_utils.py  layout_postprocess_utils.py  lock_utils.py  logging.py  markdown_utils.py  result_postprocess_utils.py  visualization_utils.py
backend/glm-ocr/resources/: WECHAT.md
(+83 files in other folders)
