[project]
name = "glm-ocr"
version = "0.1.0"
description = "GLM OCR API service for document processing and text extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pillow>=10.1.0,<11.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "pytesseract>=0.3.10",
    "python-docx>=1.1.0",
    "pypdf2>=3.0.1",
    "pdf2image>=1.17.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
    "aiosqlite>=0.22.0",
    "greenlet>=3.3.0",
    "pymupdf>=1.26.7",
    "psutil>=7.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
